--- a/css/glitch.css
+++ b/css/glitch.css
@@ -1,132 +1,241 @@
-:root{
-    --border: 0.05em;
-    --shadow-primary: #0e101c;
-    --shadow-secondary: #9216a8;
-    --primary: var(--white);
-    --text-color: var(--white);
-
-    --clip-one: inset(0 0 0 0);
-    --clip-two: inset(0.2em 0 0.1em 0);
-    --clip-three: inset(0.4em 0 0.3em 0);
-    --clip-four: inset(0.6em 0 0.5em 0);
-    --clip-five: inset(0.8em 0 0.7em 0);
-    --clip-six: inset(0.1em 0 0.9em 0);
-    --clip-seven: inset(0.3em 0 0.7em 0);
-    --shimmy-distance: 15;
-}
 
 .glitch {
-    color: transparent;
+  position: relative;
+  color: white;
+  animation: glitch-skew 1s infinite linear alternate-reverse;
 }
 
-.glitch:before,
-.glitch:after,
-.glitch-base {
-    content: attr(data-text);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    display: block;
+.glitch::before {
+  content: attr(data-text); 
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+  left: 2px;
+  text-shadow: -2px 0 #ff00c1;
+  clip: rect(44px, 450px, 56px, 0);
+  animation: glitch-anim 5s infinite linear alternate-reverse;
 }
 
-.glitch-base {
-    color: var(--text-color);
-    z-index: 1;
+.glitch::after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  left: -2px;
+  text-shadow: -2px 0 #00fff9, 2px 2px #ff00c1;
+  animation: glitch-anim2 1s infinite linear alternate-reverse;
 }
 
-.glitch:before {
-    color: var(--shadow-primary);
-    left: calc(var(--border) * 1);
-    text-shadow: -2px -2px var(--shadow-secondary);
-    z-index: 2;
-    -webkit-clip-path: var(--clip-one);
-    clip-path: var(--clip-one);
-    -webkit-animation: glitch 2s forwards, glitch-pseudo 2s forwards alternate-reverse;
-    animation: glitch 2s forwards, glitch-pseudo 2s forwards alternate-reverse;
+@keyframes glitch-anim {
+  0% {
+    clip: rect(42px, 9999px, 44px, 0);
+    transform: skew(0.52deg);
+  }
+  5% {
+    clip: rect(17px, 9999px, 94px, 0);
+    transform: skew(0.29deg);
+  }
+  10% {
+    clip: rect(40px, 9999px, 95px, 0);
+    transform: skew(0.79deg);
+  }
+  15% {
+    clip: rect(41px, 9999px, 15px, 0);
+    transform: skew(0.58deg);
+  }
+  20% {
+    clip: rect(62px, 9999px, 68px, 0);
+    transform: skew(0.1deg);
+  }
+  25% {
+    clip: rect(18px, 9999px, 12px, 0);
+    transform: skew(0.4deg);
+  }
+  30% {
+    clip: rect(84px, 9999px, 49px, 0);
+    transform: skew(0.24deg);
+  }
+  35% {
+    clip: rect(69px, 9999px, 95px, 0);
+    transform: skew(0.53deg);
+  }
+  40% {
+    clip: rect(86px, 9999px, 78px, 0);
+    transform: skew(0.2deg);
+  }
+  45% {
+    clip: rect(41px, 9999px, 33px, 0);
+    transform: skew(0.72deg);
+  }
+  50% {
+    clip: rect(33px, 9999px, 5px, 0);
+    transform: skew(0.18deg);
+  }
+  55% {
+    clip: rect(4px, 9999px, 91px, 0);
+    transform: skew(0.16deg);
+  }
+  60% {
+    clip: rect(3px, 9999px, 57px, 0);
+    transform: skew(0.96deg);
+  }
+  65% {
+    clip: rect(14px, 9999px, 2px, 0);
+    transform: skew(0.8deg);
+  }
+  70% {
+    clip: rect(53px, 9999px, 20px, 0);
+    transform: skew(0.04deg);
+  }
+  75% {
+    clip: rect(78px, 9999px, 54px, 0);
+    transform: skew(0.57deg);
+  }
+  80% {
+    clip: rect(25px, 9999px, 45px, 0);
+    transform: skew(0.48deg);
+  }
+  85% {
+    clip: rect(8px, 9999px, 4px, 0);
+    transform: skew(0.47deg);
+  }
+  90% {
+    clip: rect(10px, 9999px, 25px, 0);
+    transform: skew(0.21deg);
+  }
+  95% {
+    clip: rect(3px, 9999px, 17px, 0);
+    transform: skew(0.08deg);
+  }
+  100% {
+    clip: rect(74px, 9999px, 92px, 0);
+    transform: skew(0.54deg);
+  }
 }
 
-.glitch:after {
-    color: var(--shadow-secondary);
-    left: calc(var(--border) * -1);
-    text-shadow: 2px 2px var(--shadow-primary);
-    z-index: 3;
-    -webkit-clip-path: var(--clip-one);
-    clip-path: var(--clip-one);
-    -webkit-animation: glitch 2s forwards, glitch-pseudo 2s forwards alternate;
-    animation: glitch 2s forwards, glitch-pseudo 2s forwards alternate;
+@keyframes glitch-anim2 {
+  0% {
+    clip: rect(83px, 9999px, 10px, 0);
+    transform: skew(0.42deg);
+  }
+  5% {
+    clip: rect(32px, 9999px, 7px, 0);
+    transform: skew(0.24deg);
+  }
+  10% {
+    clip: rect(5px, 9999px, 73px, 0);
+    transform: skew(0.43deg);
+  }
+  15% {
+    clip: rect(21px, 9999px, 83px, 0);
+    transform: skew(0.16deg);
+  }
+  20% {
+    clip: rect(24px, 9999px, 53px, 0);
+    transform: skew(0.78deg);
+  }
+  25% {
+    clip: rect(20px, 9999px, 79px, 0);
+    transform: skew(0.9deg);
+  }
+  30% {
+    clip: rect(11px, 9999px, 51px, 0);
+    transform: skew(0.73deg);
+  }
+  35% {
+    clip: rect(79px, 9999px, 98px, 0);
+    transform: skew(0.79deg);
+  }
+  40% {
+    clip: rect(93px, 9999px, 96px, 0);
+    transform: skew(0.27deg);
+  }
+  45% {
+    clip: rect(57px, 9999px, 70px, 0);
+    transform: skew(0.39deg);
+  }
+  50% {
+    clip: rect(54px, 9999px, 45px, 0);
+    transform: skew(0.27deg);
+  }
+  55% {
+    clip: rect(10px, 9999px, 35px, 0);
+    transform: skew(0.85deg);
+  }
+  60% {
+    clip: rect(3px, 9999px, 89px, 0);
+    transform: skew(0.06deg);
+  }
+  65% {
+    clip: rect(26px, 9999px, 94px, 0);
+    transform: skew(0.18deg);
+  }
+  70% {
+    clip: rect(4px, 9999px, 73px, 0);
+    transform: skew(0.51deg);
+  }
+  75% {
+    clip: rect(17px, 9999px, 10px, 0);
+    transform: skew(0.89deg);
+  }
+  80% {
+    clip: rect(28px, 9999px, 38px, 0);
+    transform: skew(0.35deg);
+  }
+  85% {
+    clip: rect(59px, 9999px, 20px, 0);
+    transform: skew(0.54deg);
+  }
+  90% {
+    clip: rect(10px, 9999px, 9px, 0);
+    transform: skew(0.38deg);
+  }
+  95% {
+    clip: rect(89px, 9999px, 64px, 0);
+    transform: skew(0.2deg);
+  }
+  100% {
+    clip: rect(42px, 9999px, 21px, 0);
+    transform: skew(0.4deg);
+  }
 }
 
-@-webkit-keyframes glitch {
-    0% { -webkit-clip-path: var(--clip-one); clip-path: var(--clip-one); }
-    2%, 8% { -webkit-clip-path: var(--clip-two); clip-path: var(--clip-two); }
-    6% { -webkit-clip-path: var(--clip-two); clip-path: var(--clip-two); }
-    9% { -webkit-clip-path: var(--clip-two); clip-path: var(--clip-two); }
-    10% { -webkit-clip-path: var(--clip-three); clip-path: var(--clip-three); }
-    13% { -webkit-clip-path: var(--clip-three); clip-path: var(--clip-three); }
-    14%, 21% { -webkit-clip-path: var(--clip-four); clip-path: var(--clip-four); }
-    25% { -webkit-clip-path: var(--clip-five); clip-path: var(--clip-five); }
-    30% { -webkit-clip-path: var(--clip-five); clip-path: var(--clip-five); }
-    35%, 45% { -webkit-clip-path: var(--clip-six); clip-path: var(--clip-six); }
-    40% { -webkit-clip-path: var(--clip-six); clip-path: var(--clip-six); }
-    50% { -webkit-clip-path: var(--clip-six); clip-path: var(--clip-six); }
-    55% { -webkit-clip-path: var(--clip-seven); clip-path: var(--clip-seven); }
-    60% { -webkit-clip-path: var(--clip-seven); clip-path: var(--clip-seven); }
-    31%, 61%, 99% { -webkit-clip-path: var(--clip-four); clip-path: var(--clip-four); }
-    100% { -webkit-clip-path: inset(50%); clip-path: inset(50%); }
-}
-@keyframes glitch {
-    0% { -webkit-clip-path: var(--clip-one); clip-path: var(--clip-one); }
-    2%, 8% { -webkit-clip-path: var(--clip-two); clip-path: var(--clip-two); }
-    6% { -webkit-clip-path: var(--clip-two); clip-path: var(--clip-two); }
-    9% { -webkit-clip-path: var(--clip-two); clip-path: var(--clip-two); }
-    10% { -webkit-clip-path: var(--clip-three); clip-path: var(--clip-three); }
-    13% { -webkit-clip-path: var(--clip-three); clip-path: var(--clip-three); }
-    14%, 21% { -webkit-clip-path: var(--clip-four); clip-path: var(--clip-four); }
-    25% { -webkit-clip-path: var(--clip-five); clip-path: var(--clip-five); }
-    30% { -webkit-clip-path: var(--clip-five); clip-path: var(--clip-five); }
-    35%, 45% { -webkit-clip-path: var(--clip-six); clip-path: var(--clip-six); }
-    40% { -webkit-clip-path: var(--clip-six); clip-path: var(--clip-six); }
-    50% { -webkit-clip-path: var(--clip-six); clip-path: var(--clip-six); }
-    55% { -webkit-clip-path: var(--clip-seven); clip-path: var(--clip-seven); }
-    60% { -webkit-clip-path: var(--clip-seven); clip-path: var(--clip-seven); }
-    31%, 61%, 99% { -webkit-clip-path: var(--clip-four); clip-path: var(--clip-four); }
-    100% { -webkit-clip-path: inset(50%); clip-path: inset(50%); }
-}
-
-@-webkit-keyframes glitch-pseudo {
-    0% { transform: translate(0, 0); }
-    2%, 8% { transform: translate(calc(var(--shimmy-distance) * -1%), 0); }
-    6% { transform: translate(calc(var(--shimmy-distance) * 1%), 0); }
-    9% { transform: translate(0, 0); }
-    10% { transform: translate(calc(var(--shimmy-distance) * 1%), 0); }
-    13% { transform: translate(0, 0); }
-    14%, 21% { transform: translate(calc(var(--shimmy-distance) * 1%), 0); }
-    25% { transform: translate(calc(var(--shimmy-distance) * 1%), 0); }
-    30% { transform: translate(calc(var(--shimmy-distance) * -1%), 0); }
-    35%, 45% { transform: translate(calc(var(--shimmy-distance) * -1%)); }
-    40% { transform: translate(calc(var(--shimmy-distance) * 1%)); }
-    50% { transform: translate(0, 0); }
-    55% { transform: translate(calc(var(--shimmy-distance) * 1%), 0); }
-    60% { transform: translate(0, 0); }
-    31%, 61%, 100% { transform: translate(0, 0); }
-}
-@keyframes glitch-pseudo {
-    0% { transform: translate(0, 0); }
-    2%, 8% { transform: translate(calc(var(--shimmy-distance) * -1%), 0); }
-    6% { transform: translate(calc(var(--shimmy-distance) * 1%), 0); }
-    9% { transform: translate(0, 0); }
-    10% { transform: translate(calc(var(--shimmy-distance) * 1%), 0); }
-    13% { transform: translate(0, 0); }
-    14%, 21% { transform: translate(calc(var(--shimmy-distance) * 1%), 0); }
-    25% { transform: translate(calc(var(--shimmy-distance) * 1%), 0); }
-    30% { transform: translate(calc(var(--shimmy-distance) * -1%), 0); }
-    35%, 45% { transform: translate(calc(var(--shimmy-distance) * -1%)); }
-    40% { transform: translate(calc(var(--shimmy-distance) * 1%)); }
-    50% { transform: translate(0, 0); }
-    55% { transform: translate(calc(var(--shimmy-distance) * 1%), 0); }
-    60% { transform: translate(0, 0); }
-    31%, 61%, 100% { transform: translate(0, 0); }
+@keyframes glitch-skew {
+  0% {
+    transform: skew(-2deg);
+  }
+  10% {
+    transform: skew(3deg);
+  }
+  20% {
+    transform: skew(-4deg);
+  }
+  30% {
+    transform: skew(0deg);
+  }
+  40% {
+    transform: skew(1deg);
+  }
+  50% {
+    transform: skew(4deg);
+  }
+  60% {
+    transform: skew(-3deg);
+  }
+  70% {
+    transform: skew(0deg);
+  }
+  80% {
+    transform: skew(2deg);
+  }
+  90% {
+    transform: skew(-5deg);
+  }
+  100% {
+    transform: skew(1deg);
+  }
 }
