--- a/css/glitch.css
+++ b/css/glitch.css
@@ -1,241 +1,49 @@
-
-.glitch {
-  position: relative;
-  color: white;
-  animation: glitch-skew 1s infinite linear alternate-reverse;
+#dynamic-text .el-sp {
+    transition: all 0.1s;
+    position: relative;
+    will-change: transform, opacity;
 }
 
-.glitch::before {
-  content: attr(data-text); 
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  width: 100%; 
-  height: 100%; 
-  left: 2px;
-  text-shadow: -2px 0 #ff00c1;
-  clip: rect(44px, 450px, 56px, 0);
-  animation: glitch-anim 5s infinite linear alternate-reverse;
+#dynamic-text .el-sp.is-changing {
+    animation: changing 0.1s infinite;
 }
 
-.glitch::after {
-  content: attr(data-text);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  left: -2px;
-  text-shadow: -2px 0 #00fff9, 2px 2px #ff00c1;
-  animation: glitch-anim2 1s infinite linear alternate-reverse;
+#dynamic-text .el-sp:after {
+    content: attr(data-txt);
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    will-change: transform, opacity;
 }
 
-@keyframes glitch-anim {
-  0% {
-    clip: rect(42px, 9999px, 44px, 0);
-    transform: skew(0.52deg);
-  }
-  5% {
-    clip: rect(17px, 9999px, 94px, 0);
-    transform: skew(0.29deg);
-  }
-  10% {
-    clip: rect(40px, 9999px, 95px, 0);
-    transform: skew(0.79deg);
-  }
-  15% {
-    clip: rect(41px, 9999px, 15px, 0);
-    transform: skew(0.58deg);
-  }
-  20% {
-    clip: rect(62px, 9999px, 68px, 0);
-    transform: skew(0.1deg);
-  }
-  25% {
-    clip: rect(18px, 9999px, 12px, 0);
-    transform: skew(0.4deg);
-  }
-  30% {
-    clip: rect(84px, 9999px, 49px, 0);
-    transform: skew(0.24deg);
-  }
-  35% {
-    clip: rect(69px, 9999px, 95px, 0);
-    transform: skew(0.53deg);
-  }
-  40% {
-    clip: rect(86px, 9999px, 78px, 0);
-    transform: skew(0.2deg);
-  }
-  45% {
-    clip: rect(41px, 9999px, 33px, 0);
-    transform: skew(0.72deg);
-  }
-  50% {
-    clip: rect(33px, 9999px, 5px, 0);
-    transform: skew(0.18deg);
-  }
-  55% {
-    clip: rect(4px, 9999px, 91px, 0);
-    transform: skew(0.16deg);
-  }
-  60% {
-    clip: rect(3px, 9999px, 57px, 0);
-    transform: skew(0.96deg);
-  }
-  65% {
-    clip: rect(14px, 9999px, 2px, 0);
-    transform: skew(0.8deg);
-  }
-  70% {
-    clip: rect(53px, 9999px, 20px, 0);
-    transform: skew(0.04deg);
-  }
-  75% {
-    clip: rect(78px, 9999px, 54px, 0);
-    transform: skew(0.57deg);
-  }
-  80% {
-    clip: rect(25px, 9999px, 45px, 0);
-    transform: skew(0.48deg);
-  }
-  85% {
-    clip: rect(8px, 9999px, 4px, 0);
-    transform: skew(0.47deg);
-  }
-  90% {
-    clip: rect(10px, 9999px, 25px, 0);
-    transform: skew(0.21deg);
-  }
-  95% {
-    clip: rect(3px, 9999px, 17px, 0);
-    transform: skew(0.08deg);
-  }
-  100% {
-    clip: rect(74px, 9999px, 92px, 0);
-    transform: skew(0.54deg);
-  }
+#dynamic-text .el-sp.is-changing:after {
+    animation: changingAfter 0.4s infinite alternate;
 }
 
-@keyframes glitch-anim2 {
-  0% {
-    clip: rect(83px, 9999px, 10px, 0);
-    transform: skew(0.42deg);
-  }
-  5% {
-    clip: rect(32px, 9999px, 7px, 0);
-    transform: skew(0.24deg);
-  }
-  10% {
-    clip: rect(5px, 9999px, 73px, 0);
-    transform: skew(0.43deg);
-  }
-  15% {
-    clip: rect(21px, 9999px, 83px, 0);
-    transform: skew(0.16deg);
-  }
-  20% {
-    clip: rect(24px, 9999px, 53px, 0);
-    transform: skew(0.78deg);
-  }
-  25% {
-    clip: rect(20px, 9999px, 79px, 0);
-    transform: skew(0.9deg);
-  }
-  30% {
-    clip: rect(11px, 9999px, 51px, 0);
-    transform: skew(0.73deg);
-  }
-  35% {
-    clip: rect(79px, 9999px, 98px, 0);
-    transform: skew(0.79deg);
-  }
-  40% {
-    clip: rect(93px, 9999px, 96px, 0);
-    transform: skew(0.27deg);
-  }
-  45% {
-    clip: rect(57px, 9999px, 70px, 0);
-    transform: skew(0.39deg);
-  }
-  50% {
-    clip: rect(54px, 9999px, 45px, 0);
-    transform: skew(0.27deg);
-  }
-  55% {
-    clip: rect(10px, 9999px, 35px, 0);
-    transform: skew(0.85deg);
-  }
-  60% {
-    clip: rect(3px, 9999px, 89px, 0);
-    transform: skew(0.06deg);
-  }
-  65% {
-    clip: rect(26px, 9999px, 94px, 0);
-    transform: skew(0.18deg);
-  }
-  70% {
-    clip: rect(4px, 9999px, 73px, 0);
-    transform: skew(0.51deg);
-  }
-  75% {
-    clip: rect(17px, 9999px, 10px, 0);
-    transform: skew(0.89deg);
-  }
-  80% {
-    clip: rect(28px, 9999px, 38px, 0);
-    transform: skew(0.35deg);
-  }
-  85% {
-    clip: rect(59px, 9999px, 20px, 0);
-    transform: skew(0.54deg);
-  }
-  90% {
-    clip: rect(10px, 9999px, 9px, 0);
-    transform: skew(0.38deg);
-  }
-  95% {
-    clip: rect(89px, 9999px, 64px, 0);
-    transform: skew(0.2deg);
-  }
-  100% {
-    clip: rect(42px, 9999px, 21px, 0);
-    transform: skew(0.4deg);
-  }
+@keyframes changing {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
-@keyframes glitch-skew {
-  0% {
-    transform: skew(-2deg);
-  }
-  10% {
-    transform: skew(3deg);
-  }
-  20% {
-    transform: skew(-4deg);
-  }
-  30% {
-    transform: skew(0deg);
-  }
-  40% {
-    transform: skew(1deg);
-  }
-  50% {
-    transform: skew(4deg);
-  }
-  60% {
-    transform: skew(-3deg);
-  }
-  70% {
-    transform: skew(0deg);
-  }
-  80% {
-    transform: skew(2deg);
-  }
-  90% {
-    transform: skew(-5deg);
-  }
-  100% {
-    transform: skew(1deg);
-  }
+@keyframes changingAfter {
+    0% {
+        opacity: 0.3;
+        transform: translateX(10px) scaleX(2);
+    }
+    50% {
+        opacity: 0;
+        transform: translateX(0) scaleX(2);
+    }
+    100% {
+        opacity: 0.3;
+        transform: translateX(-10px) scaleX(2);
+    }
 }
