--- a/css/index.css
+++ b/css/index.css
@@ -394,7 +394,20 @@
         font-size: 24px;
     }
     .box-header h4 {
-        font-size: 1.2rem;
+        font-size: 2rem;
+    }
+    .box-info > p {
+        font-size: 1.5rem;
+        margin: 1rem 0;
+    }
+    .box-info li {
+        font-size: 1.7rem;
+    }
+    .box-info ul {
+        gap: 1rem;
+    }
+    .checkbox-icon {
+        font-size: 1.7rem;
     }
     .news-header {
         flex-direction: column;
