--- a/css/index.css
+++ b/css/index.css
@@ -371,7 +371,7 @@
         flex-direction: column;
         gap: 0.5rem;
         margin-bottom: 3rem;
-        font-size: 4rem;
+        font-size: 5rem;
     }
     .hyphen {
         display: none;
@@ -401,7 +401,7 @@
         margin: 1rem 0;
     }
     .box-info li {
-        font-size: 1.7rem;
+        font-size: 1.5rem;
     }
     .box-info ul {
         gap: 1rem;
@@ -414,7 +414,7 @@
     }
     .news-header h2 {
         margin-bottom: 1rem;
-        font-size: 4rem;
+        font-size: 5rem;
         text-align: center;
     }
     .news-card,
@@ -434,9 +434,12 @@
         transform: translateY(0);
     }
     .card-title {
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
     .card-subtitle {
-        font-size: 0.9rem;
+        font-size: 1.5rem;
+    }
+    .card-tag {
+        font-size: 1rem;
     }
 }
